--- a/TwoWay/style/index.css
+++ b/TwoWay/style/index.css
@@ -6,7 +6,6 @@ html,body{
 	padding: 0px;
 	font-size: 0px;	
 }
-
 .navbar-container{
 	display: inline-block;
 	position: fixed;
@@ -17,18 +16,27 @@ html,body{
 	z-index: 10;
 	border-bottom: 3px solid black;
 }
+.navbar-hamburger, .navbar-cross{
+	position: relative;
+	display: inline-block;
+	margin-right: 5%;
+	top: 5%;
+	float: right;
+	height: 90%;
+	cursor:pointer;
+}
 .navbar {
 	position: relative;
 	text-align: right;
 	float: right;
-	padding-right: 50px;
+	padding-right: 5%;
 	width: 70%;
 }
 .navbar-button{
 	display: inline-block;
 	font-family: 'Helvetica', sans-serif;
     font-size: 25px;
-	padding: 0px 30px 0px 30px;
+	padding: 0px 30px;
 	cursor:pointer;
 }
 .navbar-button:hover {
@@ -37,7 +45,7 @@ html,body{
 .nav-img {
 	position: relative;
 	float: left;
-	padding-left: 50px;
+	padding-left: 5%;
 	top: 15%;
 	height: 70%;
 	margin: auto;
@@ -45,7 +53,6 @@ html,body{
 #navbar-button-00{
 	color: #005bbb; 
 }
-
 .section-container {
 	display: inline-block;
 	position: relative;
@@ -62,6 +69,23 @@ html,body{
 .content-text {
 	display: inline-block;
 	position: relative;
+	width: 65%;
+}
+.content-text h1 {
+	font-family: 'Helvetica', sans-serif;
+	font-size: 55px;
+	margin: 0px 0px 40px 0px;
+}
+.content-text h2{
+	font-family: 'Helvetica', sans-serif;
+	font-size: 35px;
+	margin: 0px 0px 40px 0px;
+}
+.content-text p, .content-text label {
+	font-family: 'Helvetica', sans-serif;
+	font-size: 18px;
+	margin: 0px;
+	line-height: 200%;
 }
 .section-button{
 	display: inline-block;
@@ -77,6 +101,7 @@ html,body{
 	position: relative;
 }
 
+
 #section-container-00{
 	width: 100%;
 	overflow: hidden;
@@ -85,26 +110,18 @@ html,body{
 	width: 100%;
 }
 
+
 #section-container-10 {
 	background-color: #f9f9f9;
 }
 #content-container-10 {
 	width: 100%;
 }
-#content-text-10{
-	width: 65%;
-}
 #content-text-10 h1 {
-	font-family: 'Helvetica', sans-serif;
-	font-size: 55px;
-	margin: 0px 0px 40px 0px;
 	color: #005bbb;
 }
 #content-text-10 p {
-	font-family: 'Helvetica', sans-serif;
-	font-size: 18px;
-	margin: 0px;
-	line-height: 200%;
+	color: #000000;
 }
 
 
@@ -121,20 +138,10 @@ html,body{
 #content-container-21{
 	width: 45%;
 }
-#content-text-20{
-	width: 65%;
-}
 #content-text-20 h1 {
-	font-family: 'Helvetica', sans-serif;
-	font-size: 55px;
-	margin: 0px 0px 40px 0px;
 	color: #ffd500;
 }
 #content-text-20 p {
-	font-family: 'Helvetica', sans-serif;
-	font-size: 18px;
-	margin: 0px;
-	line-height: 200%;
 	color: #ffffff;
 }
 #section-button-20 {
@@ -171,20 +178,11 @@ html,body{
 #content-container-31{
 	width: 45%;
 }
-#content-text-30{
-	width: 65%;
-}
 #content-text-30 h1 {
-	font-family: 'Helvetica', sans-serif;
-	font-size: 55px;
-	margin: 0px 0px 40px 0px;
 	color: #005bbb;
 }
 #content-text-30 p {
-	font-family: 'Helvetica', sans-serif;
-	font-size: 18px;
-	margin: 0px;
-	line-height: 200%;
+	color: #000000;
 }
 #section-button-30 {
 	background-image: url("../img/button2c.png");
@@ -192,16 +190,6 @@ html,body{
 #section-button-30:hover {
 	background-image: url("../img/button2a.png");
 }
-/*
-#section-button-30 p{
-	border: 2px solid #000000;
-	border-radius: 5px;
-}
-#section-button-30 p:hover {
-	color: #005bbb;
-	border-color: #005bbb;
-}
-*/
 #section-img-31{
 	height: 100%;
 	float: right;
@@ -214,21 +202,11 @@ html,body{
 #content-container-40{
 	width: 100%;
 }
-#content-text-40{
-	width: 65%;
-}
 #content-text-40 h1 {
-	font-family: 'Helvetica', sans-serif;
-	font-size: 55px;
-	margin: 0px 0px 40px 0px;
 	color: #005bbb;
 }
 #content-text-40 p {
-	font-family: 'Helvetica', sans-serif;
-	font-size: 18px;
-	margin: 0px;
-	line-height: 200%;
-	
+	color: #000000;
 }
 #section-button-40 {
 	background-image: url("../img/button3c.png");
@@ -236,19 +214,6 @@ html,body{
 #section-button-40:hover {
 	background-image: url("../img/button3a.png");
 }
-/*
-#section-button-40 p{
-	border: 2px solid #000000;
-	border-radius: 5px;
-}
-#section-button-40 p:hover {
-	color: #005bbb;
-	border-color: #005bbb;
-}
-#section-img-41{
-	height: 100%;
-	float: right;
-}*/
 
 
 #section-container-50 {
@@ -257,64 +222,28 @@ html,body{
 #content-container-50, #content-container-51 {
 	float: left;
 	overflow: hidden;
-}
-#content-container-50{
-	width: 50%;
-}
-#content-container-51{
-	width: 50%;
-}
-#content-text-50{
-	width: 65%;
+	width:  50%;
 }
 #content-text-50 h1 {
-	font-family: 'Helvetica', sans-serif;
-	font-size: 55px;
-	margin: 0px 0px 40px 0px;
 	color: #ffd500;
 }
 #content-text-50 h2 {
-	font-family: 'Helvetica', sans-serif;
-	font-size: 35px;
-	margin: 0px 0px 40px 0px;
 	color: #ffd500;
 }
-#content-text-50 p,label {
-	font-family: 'Helvetica', sans-serif;
-	font-size: 18px;
-	margin: 0px;
-	line-height: 200%;
+#content-text-50 p, #content-text-50 label {
 	color: #ffffff;
 }
 #content-container-50 {
 	background-image: url("../img/home-50.png");
 	background-repeat: no-repeat;
-	background-size: 100%;
+	background-size: cover;
 }
-
-/*
-#section-button-50 {
-	background-image: url("../img/button4d.png");
-}
-#section-button-50:hover {
-	background-image: url("../img/button4b.png");
-}
-
-#section-button-50 p{
-	border: 2px solid #000000;
-	border-radius: 5px;
-}
-#section-button-50 p:hover {
-	color: #005bbb;
-	border-color: #005bbb;
-}
-*/
 #googlemap-51 {
 	position: relative;
 	width: 100%;
 	height: 100%;
 }
-input[type=text],input[type=email],textarea,select{
+input[type=text], input[type=email], textarea, select{
     width: 100%;
     padding: 8px 10px;
     margin: 0px 0px 10px 0px;
@@ -329,7 +258,7 @@ input[type=submit] {
     width: 100%;
     background-color: #ffd500;
     padding: 14px 20px;
-    margin: 50px 0px 0px 0px;
+    margin-top: 50px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -342,45 +271,24 @@ input[type=submit]:hover {
     color: #ffffff;
 }
 
+
 #section-container-60 {
 	background-color: #ffffff;
 }
-#content-container-60, #content-container-51 {
+#content-container-60, #content-container-61 {
 	float: left;
-	overflow: hidden;
-}
-#content-container-60, #content-container-61{
 	width: 50%;
 }
-#content-text-60{
-	width: 65%;
+#content-container-61{
+	height: 90%;
 }
 #content-text-60 p{
-	font-family: 'Helvetica', sans-serif;
-	font-size: 18px;
-	margin: 0px;
 	line-height: 150%;
 	color: #005bbb;
 }
-
-/*
-#section-button-50 {
-	background-image: url("../img/button4d.png");
-}
-#section-button-50:hover {
-	background-image: url("../img/button4b.png");
-}
-
-#section-button-50 p{
-	border: 2px solid #000000;
-	border-radius: 5px;
-}
-#section-button-50 p:hover {
-	color: #005bbb;
-	border-color: #005bbb;
-}
-*/
 #section-img-61{
+	max-height: 50%;
+	max-width: 80%;
 	float: right;
 }
 
